# devops

./: .gitignore  Dockerfile  README.md  create-files.sh  deploy_prep.py  digitalocean.py  docker-compose.yml  docker_deploy_prep.py  mongo-db-prep.py  mongo_prep.py  nginx_conf.py  postgres.yml  prepare_dirs.py  project-create-lb3.sh  project-create-lb4.sh  project-create-react.sh  project-delete.sh  pyproject.toml  requirements.txt  server_prep.py  server_status.py  simulateMpesa.py  templates.py  uwsgi.ini
src/: app.py  cmd.py  command_line.py  deploy_react_app.py  docker_cmd.py  installations.py  kube_cmd.py  nginx_conf.py  uwsgi.ini
src/applications/: wordpress.py
src/cmd/: nginx_to_socket_stream.py  nginx_to_socket_stream_config.py
src/database/: database_queries.py  postgres_connection.py  sqlserver_connection.py
src/digital_ocean/: digital_ocean_api_wrapper.py
src/git/: post_receive.py  react_post_receive.py
src/nginx/: nginx.py  nginx_confs.py  nginx_legacy.py  nginx_to_localhost_and_port_config.py  nginx_to_socket_stream_config.py  uwsgi_socket.py
src/run_files/: applications.py  flask.py  wordpress.py
src/scripts/: develop.sh  production.sh  production_kubernetes.sh
src/socket_stream/: socket_stream.py  uwsgi_socket.py
src/software/: production.py
src/templates/: docker_compose_snippets.py
src/utils/: check_os.py  config.py  config_object.py  inquirer_wrapper.py  install_minikube.py  install_software.py
templates/: git_post_recieve.py  installthis.py  mongo-db.py  mpesa.py  nginx.py
templates/docker/: docker_post_receive.py
(+19 files in other folders)
