[tool.poetry]
name = "devops"
version = "0.1.0"
description = ""
authors = ["Emmanuel <emmanuel.davidson@thejitu.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
inquirer = "^2.10.0"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
